# transformer

./: .env.example  .gitignore  README.md  mutagen.yml  pyproject.toml  requirements.txt
cluster/: setup_conda.sh
config/: tokenizer.json
notebooks/: beam_search_toy.ipynb  datasets.ipynb  eval_transformer.ipynb  multi30k.ipynb  overfit_transformer.ipynb  playground.ipynb  test_hr_en.ipynb  tokenizer_test.ipynb  transformer_test.ipynb
slurm/: activate_env.sh  sbatch.py  submit.py  submit.sh  submit_hren.py  submit_it.py  test_main.py  train.sbatch  train_hr_en.sbatch
slurm/adastra/: submit_it.py
src/datasets/: hrenwac_v2.py  macocu_hr_en.py  translation.py
src/models/: gpt.py  transformer.py
src/scripts/: bpe_train.py  eval_hr_en.py  sweep_multi30k.py  train_hr_en.py  train_hr_en.yaml
src/scripts/en-hr/: train_bpe.py
src/tokenizers/: BPE.py  README.md
src/train/: lit_transformer.py  train_transformer.py
src/train/utils/: git_callback.py
src/utils/: paths.py
tools/: convert_books.py
