
[project]
name = "transformer"
version = "0.1.0"
description = "Transformer implementation in PyTorch"
requires-python = ">=3.8"
authors = [
    { name = "Marko Cvjetko", email = "marko.cvjetko@gmail.com" }
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
