
[project]
name = "transformer"
version = "0.1.0"
description = "Transformer implementation in PyTorch"
requires-python = ">=3.10"
authors = [
    { name = "Marko Cvjetko", email = "marko.cvjetko1@gmail.com" }
]
dependencies = [
    "torch",
    "datasets",
    "tqdm",
    "sacrebleu",
    "matplotlib",
    "lightning",
    "optuna"
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
