
[project]
name = "transformer"
version = "0.1.0"
description = "Transformer implementation in PyTorch"
requires-python = ">=3.11"
authors = [
    { name = "Marko Cvjetko", email = "marko.cvjetko1@gmail.com" }
]
dependencies = [
    "torch",
    "datasets",
    "tqdm",
    "sacrebleu",
    "matplotlib",
    "lightning",
    "optuna",
    "optuna-integration[pytorch-lightning]",
    "tensorboard",
]

[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
